versioned_docs/version-1.3.0/transform.client/library/plugins/plugins.md
---
sidebar_position: 1
sidebar_label: Plugins
---

# Plugins

The MVP of the **transform**.engine, plugins!

It's the same process as installing any plugin on a Windows 10 offline computer. No suprises!

To help you get going, you'll find handy guides on how to install and license a number of different manufacturers plugins.

Whilst we've sought to include a large and varied list of manufacturers, if you think we have missed someone, let us know on [hello@fourieraudio.com](mailto:hello@fourieraudio.com)!

:::info
Or alternatively, if you'd like access to 70+ of the world's best plugins for live - all installed in a single click - check out [**transform**.suite '25](https://fourieraudio.com/suite), including the [quick start guide](../../../transform.suite/quick-start).
:::

## House Recommendations

### OpenGL

Whilst some plugin manufacturers use OpenGL, for optimum performance on the **transform**.engine, we recommend disabling OpenGL graphics when you can.

### VSTi

Whilst we support VST3s and CLAP, your VSTis won't get past our plugin scanner, sorry. They run a tight ship, and if your name isn't VST3 (or CLAP... ), you're not getting in.

### Multi-channel

Whilst we support mono and stereo plugin chains, we currently don't support any larger channel widths than this for now (but trust it is on our to-do list).
